--- a/test_regression/macros/common.j2
+++ b/test_regression/macros/common.j2
@@ -1,3 +1,3 @@
 {%- macro cc_num_with_comma(ctx) -%}
-    {%- if ctx["show_confidential"] -%} cc_num, {%- endif -%}
+    {%- if ctx.show_confidential -%} cc_num, {%- endif -%}
 {%- endmacro -%}
