Created new mortgage_analysis example

--- a/test_regression/macros/views.j2
+++ b/test_regression/macros/views.j2
@@ -1,3 +1,13 @@
+{%- macro transactions_with_month() -%}
+
+SELECT *,
+    STRFTIME('%Y-%m', date(trans_date_trans_time)) AS month
+
+FROM transactions
+
+{%- endmacro -%}
+
+
 {%- macro add_fraud_stats_to_cte(ref, ctx, most_fraud_cte) -%}
 
 SELECT a.*, 
@@ -9,6 +19,6 @@ SELECT a.*,
 FROM {{ most_fraud_cte }} a
     LEFT JOIN {{ ref("fraud_stats") }} b
     ON {{ ctx.join_cols }}
-ORDER BY {{ ctx.order_by_cols }}
+ORDER BY {{ ctx.group_by_cols }}
 
 {%- endmacro -%}
